src/test/ui/issues/issue-5500-1.mir.stderr
error[E0594]: cannot assign to field `_iter.node` of immutable binding (Ast)
  --> $DIR/issue-5500-1.rs:12:5
   |
LL |       let _iter = TrieMapIterator{node: &a};
   |           ----- help: make this binding mutable: `mut _iter`
LL | /     _iter.node = &
LL | |
LL | |                    // MIR doesn't generate an error because the code isn't reachable. This is OK
LL | |                    // because the test is here to check that the compiler doesn't ICE (cf. #5500).
LL | |     panic!()
   | |____________^ cannot mutably borrow field of immutable binding

error: aborting due to previous error

